# eg

./: .gitignore  Cargo.toml  LICENCE-MIT  README.md
eg/: Cargo.toml
eg/examples/: readme.rs
eg/src/: lib.rs
eg/tests/: named_field_enum_variant.rs  named_field_struct.rs  tuple_enum_variant.rs  tuple_struct.rs  union.rs  unit_enum_variant.rs  unit_struct.rs
eg_derive/: Cargo.toml  tags
eg_derive/src/: lib.rs
eg_derive/tests/: example.rs
eg_test/: Cargo.toml
eg_test/tests/: test_derive.rs
