[package]
name = "eg"
version = "0.1.2"
authors = ["Christian Dunn <bkkchris.dunn@outlook.com>"]
edition = "2021"

description = "Easy dummy data."
repository = "https://github.com/wabisabia/eg"
readme = "../README.md"

license = "MIT OR Apache-2.0"
categories = ["development-tools"]
keywords = ["example", "dummy", "data"]

[dependencies]
eg_derive = { version = "=0.1.0", path = "../eg_derive" }
