[package]
name = "eg_derive"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[[test]]
name = "tests"
path = "tests/example.rs"

[features]
test = []

[dependencies]
proc-macro2 = "1.0.36"
syn = { version="1.0.86", features=["full", "extra-traits"] }
quote = "1.0.15"

[dev-dependencies]
eg = { path = "../eg" }
